Start of authentication work, created layout for sign in.

--- a/lib/l10n/intl_en_US.arb
+++ b/lib/l10n/intl_en_US.arb
@@ -1,16 +1,21 @@
 {
-  "@@locale": "en-US",
-  "appTitle": "The PCOS Protocol",
-  "companyTitle": "The PCOS Nutritionist",
-  "dashboardTitle": "Dashboard",
-  "knowledgeBaseTitle": "Knowledge Base",
-  "recipesTitle": "Recipes",
-  "favouritesTitle": "Favorites",
-  "profileTitle": "Profile",
-  "changePasswordTitle": "Change Password",
-  "requestDataTitle": "Request Data",
-  "helpTitle": "Help",
-  "supportTitle": "Support",
-  "privacyTitle": "Privacy",
-  "termsOfUseTitle": "Terms of use"
+    "@@locale": "en",
+    "appTitle": "The PCOS Protocol",
+    "companyTitle": "The PCOS Nutritionist",
+    "dashboardTitle": "Dashboard",
+    "knowledgeBaseTitle": "Knowledge Base",
+    "recipesTitle": "Recipes",
+    "favouritesTitle": "Favorites",
+    "profileTitle": "Profile",
+    "changePasswordTitle": "Change Password",
+    "requestDataTitle": "Request Data",
+    "helpTitle": "Help",
+    "supportTitle": "Support",
+    "privacyTitle": "Privacy",
+    "termsOfUseTitle": "Terms of use",
+    "signInTitle": "Sign In",
+    "signUpTitle": "Sign Up",
+    "emailLabel":  "Email",
+    "passwordLabel": "Password",
+    "goto_signup_text": "To use The PCOS Protocol you first need to complete our PCOS questionnaire and sign up for our programme."
 }
