--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -17,5 +17,15 @@
     "signUpTitle": "Sign Up",
     "emailLabel":  "Email",
     "passwordLabel": "Password",
-    "goto_signup_text": "To use The PCOS Protocol you first need to complete our PCOS questionnaire and sign up for our programme."
+    "gotoSignupText": "To use The PCOS Protocol you first need to complete our PCOS questionnaire and sign up for our programme.",
+    "gotoSigninText": "Already have an account for The PCOS Protocol?",
+    "returnToSignInTitle": "Return to Sign In",
+    "emailLinkTitle": "Email Link",
+    "emailLinkText": "Or we can send a link to your email so you can visit the website on another device.",
+    "openWebsiteTitle": "Open Website",
+    "openWebsiteText": "To register now on your device click the button below to visit the PCOS Questionnaire website.",
+    "signinErrorTitle": "Sign In Failed",
+    "signinErrorText": "Your email or password are incorrect, please try again.",
+    "questionnaireWebsiteErrorTitle": "Could not open browser",
+    "questionnaireWebsiteErrorText": "Open a browser and visit [url]"
 }
