--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -29,5 +29,17 @@
     "questionnaireWebsiteErrorTitle": "Could not open browser",
     "questionnaireWebsiteErrorText": "Open a browser and visit [url]",
     "clearButton": "Clear",
-    "pinCorrectTitle": "PIN Correct"
+    "pinCorrectTitle": "PIN Correct",
+    "pinSetTitle": "Please set your unlock PIN",
+    "pinConfirmTitle": "Please confirm your unlock PIN",
+    "pinCompleteTitle": "PIN Entry Successful",
+    "pinEntryErrorTitle": "Please try again",
+    "pinEntryErrorText": "Your PINs do not match, please try again",
+    "pinSaveErrorTitle": "Ooops",
+    "pinSaveErrorText": "We could not save your pin to your device, please try again next time you sign in.",
+    "pinUnlockTitle": "Enter your PIN to unlock",
+    "pinUnlockErrorTitle": "Please try again",
+    "pinUnlockErrorText": "Your PIN is incorrect, please try again",
+    "pinUnlockAttemptsErrorTitle": "Unsuccessful Pin Entry",
+    "pinUnlockAttemptsErrorText": "You have incorrect entered your PIN five times, please sign-in using your email and password."
 }
