--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -38,7 +38,7 @@
     "pinSaveErrorTitle": "Ooops",
     "pinSaveErrorText": "We could not save your pin to your device, please try again next time you sign in.",
     "pinUnlockTitle": "Enter your PIN to unlock",
-    "pinUnlockErrorTitle": "Please try again",
+    "pinUnlockErrorTitle": "Incorrect PIN",
     "pinUnlockErrorText": "Your PIN is incorrect, please try again",
     "pinUnlockAttemptsErrorTitle": "Unsuccessful Pin Entry",
     "pinUnlockAttemptsErrorText": "You have incorrect entered your PIN five times, please sign-in using your email and password."
