Updated navigation header and tabs with darker primary color, and added favourites icon at top, and updated tabs to display coach chat icon. Also updated theme to reflect above.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -6,6 +6,8 @@
     "knowledgeBaseTitle": "Knowledge Base",
     "recipesTitle": "Recipes",
     "favouritesTitle": "Favourites",
+    "coachChatTitle": "Coach Chat",
+    "messagesTitle": "Messages",
     "profileTitle": "Profile",
     "changePasswordTitle": "Change Password",
     "requestDataTitle": "Request Data",
