Added recipe details screen with tabs to display details. Updated color palette, and native splash screen color. Also removed a bunch of debugPrints, and added blob storage url to flavors.dart.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -50,5 +50,14 @@
     "coachChatHeading": "Chat to your Coach",
     "sendButtonText": "Send",
     "enterMessageText": "Enter your message",
-    "validateMessageText": "Please enter your message text"
+    "validateMessageText": "Please enter your message text",
+    "searchInputText": "Search",
+    "recipeDetailsSummaryTab": "Summary",
+    "recipeDetailsIngredientsTab": "Ingredients",
+    "recipeDetailsMethodTab": "Method",
+    "recipeDetailsTipsTab": "Tips",
+    "minutesShort": "mins",
+    "recipeDifficultyEasy": "Easy",
+    "recipeDifficultyMedium": "Medium",
+    "recipeDifficultyHard": "Hard"
 }
