Final changes for video, and added some static html content for lesson.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -59,5 +59,6 @@
     "minutesShort": "mins",
     "recipeDifficultyEasy": "Easy",
     "recipeDifficultyMedium": "Medium",
-    "recipeDifficultyHard": "Hard"
+    "recipeDifficultyHard": "Hard",
+    "loadingVideo": "Loading Video"
 }
