Refactor quite a few things including widgets/auth foler to widgets/authentication. Also created two new button widgets in widgets/shared folder. Added layout for profile readonly and editable. Added  tooltip for locked, Moved Help menu item onto a FAB on Dashboard.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -17,15 +17,16 @@
     "termsOfUseTitle": "Terms of use",
     "signInTitle": "Sign In",
     "signUpTitle": "Sign Up",
-    "emailLabel":  "Email",
+    "emailLabel":  "Email or Username",
     "passwordLabel": "Password",
     "gotoSignupText": "To use The PCOS Protocol you first need to complete our PCOS questionnaire and sign up for our programme.",
     "gotoSigninText": "Already have an account for The PCOS Protocol?",
     "returnToSignInTitle": "Return to Sign In",
     "emailLinkTitle": "Email Link",
     "emailLinkText": "Or we can send a link to your email so you can visit the website on another device.",
-    "openWebsiteTitle": "Open Website",
+    "openWebsiteTitle": "Open Questionnaire",
     "openWebsiteText": "To register now on your device click the button below to visit the PCOS Questionnaire website.",
+    "openWebsiteWhy": "The PCOS Protocol is a personalised programme, delivered according to your own goals.",
     "signinErrorTitle": "Sign In Failed",
     "signinErrorText": "Your email or password are incorrect, please try again.",
     "validateEmailMessage": "Please enter your email",
@@ -65,5 +66,16 @@
     "frequentlyAskedQuestions": "FAQs",
     "courseQuestions": "Course questions",
     "gettingStartedText": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget elit a felis vestibulum vehicula id ac ipsum. Ut venenatis augue quis interdum porttitor. Praesent rutrum feugiat porttitor. Pellentesque et dapibus nisl. Pellentesque iaculis tortor tortor, non ultrices elit ullamcorper in. Nam a mollis quam. Vestibulum lacinia mauris lacus, et ultrices nisl dictum non. Quisque gravida ex nec diam ullamcorper, nec dictum magna tincidunt. Nunc urna neque, viverra ac lacus et, ullamcorper fermentum enim. Maecenas nec urna a ex efficitur euismod. Fusce vulputate tortor eu mauris lacinia, ut malesuada tellus imperdiet. Nam ante erat, vulputate eu enim vel, interdum hendrerit turpis. Pellentesque non vulputate nulla, ut suscipit magna. Fusce a neque enim. Aenean et consequat tortor.</p>\n<p>Vivamus convallis at dolor quis efficitur. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In dui quam, pulvinar ac orci vitae, tincidunt finibus justo. Aenean scelerisque id dolor sit amet dignissim. Phasellus scelerisque aliquet vehicula. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla facilisi. Aenean posuere maximus nunc. Nullam mollis dignissim neque, non interdum lorem laoreet vel. Praesent aliquet enim orci, non sodales nisi facilisis sed. Donec consequat massa et malesuada scelerisque. Vestibulum cursus turpis quam, in consectetur ipsum ultrices ac.</p>\n<p>Donec sagittis laoreet dictum. Fusce massa lacus, varius at varius blandit, scelerisque id justo. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In sit amet fringilla tortor. Vestibulum dapibus iaculis augue, ut luctus nulla dignissim in. Aliquam et sem ultricies, luctus lacus et, ornare quam. Donec et sagittis mi. Maecenas mollis iaculis leo, sit amet interdum turpis interdum eget. Donec feugiat ante sit amet pellentesque semper. Donec eu erat egestas, tempus neque non, ullamcorper massa. Praesent ac interdum lorem. Aliquam venenatis elementum mollis. Donec pharetra eleifend nulla, in vestibulum purus ullamcorper sit amet.</p>",
-    "tryAgain": "Please try again later."
+    "tryAgain": "Please try again later.",
+    "profileFirstNameLabel": "First name",
+    "profileLastNameLabel": "Last name",
+    "profileAliasLabel": "Username",
+    "profileEmailLabel": "Email",
+    "profileEditButton": "Edit profile",
+    "profileSaveButton": "Save profile",
+    "profileCancelButton": "Cancel",
+    "profileValidateFirstNameMessage": "Please enter your first name.",
+    "profileValidateLastNameMessage": "Please enter your last name.",
+    "profileValidateEmailMessage": "Please enter your email.",
+    "userNameLocked":  "Username cannot be updated"
 }
