Added forgotten pin to pin entry, internet connection test on login, and updated some layout. Also made a few small changes to remove some Dart Analysis warnings.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -31,16 +31,21 @@
     "signinErrorText": "Your email or password are incorrect, please try again.",
     "signInEmailNotVerifiedErrorText": "Your email address has not be verified, please check your inbox for a new verification email.",
     "signinUnknownErrorText": "We could not sign you in, please try again later",
-    "validateEmailMessage": "Please enter your email",
+    "validateEmailMessage": "Please enter your email or username",
     "validatePasswordMessage": "Please enter your password",
     "questionnaireWebsiteErrorTitle": "Could not open browser",
     "questionnaireWebsiteErrorText": "Open a browser and visit [url]",
     "clearButton": "Clear",
     "pinCorrectTitle": "PIN Correct",
+    "pinForgottenTitle": "Forgotten PIN",
+    "pinForgottenMessage": "This will clear your credentials and PIN so you can sign in with your username/email and password. Do you want to continue?",
+    "pinForgottenContinue": "Continue",
+    "pinForgottenCancel": "Cancel",
     "pinSetTitle": "Please set your unlock PIN",
     "pinConfirmTitle": "Please confirm your unlock PIN",
     "pinEnteredSuccessfulTitle": "PIN successful",
     "pinSetSuccessfulTitle": "Your PIN has been set",
+    "pinSetSuccessfulMessage": "Use this to unlock the app",
     "pinEntryErrorTitle": "Please try again",
     "pinEntryErrorText": "Your PINs do not match, please try again",
     "pinSaveErrorTitle": "Ooops",
@@ -50,6 +55,10 @@
     "pinUnlockErrorText": "Your PIN is incorrect, please try again",
     "pinUnlockAttemptsErrorTitle": "Unsuccessful Pin Entry",
     "pinUnlockAttemptsErrorText": "You have incorrectly entered your PIN five times, please sign-in using your email and password.",
+    "pinRefreshErrorTitle": "Authentication token expired",
+    "pinRefreshErrorText": "Your authentication token has expired, please sign-in using your email and password.",
+    "internetConnectionTitle": "Internet connection required",
+    "internetConnectionText": "Please ensure you are connected to the internet. ",
     "coachChatHeading": "Chat to your Coach",
     "sendButtonText": "Send",
     "enterMessageText": "Enter your message",
