Added tags to search header, and added values for kb's and recipes.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -102,5 +102,25 @@
     "changePasswordFailedTitle": "Change password failed",
     "changePasswordFailedMessage": "We could not update your password, please try again later.",
     "changePasswordSuccessTitle": "Change password successful",
-    "changePasswordSuccessMessage": "Your password has been updated."
+    "changePasswordSuccessMessage": "Your password has been updated.",
+    "tagAll": "All",
+    "recipesTagBreakfast": "Breakfast",
+    "recipesTagMains": "Mains",
+    "recipesTagSnack": "Snack",
+    "recipesTagSweet": "Sweet",
+    "recipesTagSavoury": "Savoury",
+    "recipesTagVegetarian": "Vegetarian",
+    "recipesTagVegan": "Vegan",
+    "recipesTagEggFree": "Egg-free",
+    "recipesTagFodmap": "Fodmap-friendly",
+    "kbTagDiet": "Diet",
+    "kbTagEnergy": "Energy",
+    "kbTagExercise": "Exercise",
+    "kbTagFertility": "Fertility",
+    "kbTagHair": "Hair",
+    "kbTagInsulin": "Insulin",
+    "kbTagSkin": "Skin",
+    "kbTagStress": "Stress",
+    "kbTagThyroid": "Thyroid",
+    "searchHeaderFilterText": "Filter:"
 }
