Added forgotten password api call. using email address.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -42,10 +42,13 @@
     "pinForgottenContinue": "Continue",
     "pinForgottenCancel": "Cancel",
     "passwordForgottenTitle": "Forgotten Password",
-    "passwordForgottenMessage": "We will send an email to your registered email address, so you can reset your password. Do you want to continue?",
+    "passwordForgottenMessage": "We will send an email to you ([emailAddress]), so you can reset your password. Do you want to continue?",
+    "passwordForgottenEmailMessage": "Please enter your registered email address in the 'Email or username' box and click 'Forgotten Password' again.",
     "passwordForgottenContinue": "Yes, send email",
     "passwordForgottenCancel": "Cancel",
+    "passwordForgottenOkay": "Okay",
     "passwordForgottenCompleteMessage": "We have sent you a reset password email, please check your inbox and junk mail. Thank you",
+    "passwordForgottenFailedMessage": "We could not send you an email right now, please try again later.",
     "pinSetTitle": "Please set your unlock PIN",
     "pinConfirmTitle": "Please confirm your unlock PIN",
     "pinEnteredSuccessfulTitle": "PIN successful",
