Getting CMS grouped items for faqs and course questions.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -28,7 +28,7 @@
     "openWebsiteText": "To register now on your device click the button below to visit the PCOS Questionnaire website.",
     "openWebsiteWhy": "The PCOS Protocol is a personalised programme, delivered according to your own goals.",
     "signinErrorTitle": "Sign In Failed",
-    "signinErrorText": "Your email or password are incorrect, please try again.",
+    "signinErrorText": "Your email/username or password are incorrect, please try again.",
     "signInEmailNotVerifiedErrorText": "Your email address has not be verified, please check your inbox for a new verification email.",
     "signinUnknownErrorText": "We could not sign you in, please try again later",
     "validateEmailMessage": "Please enter your email or username",
@@ -42,8 +42,8 @@
     "pinForgottenContinue": "Continue",
     "pinForgottenCancel": "Cancel",
     "passwordForgottenTitle": "Forgotten Password",
-    "passwordForgottenMessage": "We will send an email to you ([emailAddress]), so you can reset your password. Do you want to continue?",
-    "passwordForgottenEmailMessage": "Please enter your registered email address in the 'Email or username' box and click 'Forgotten Password' again.",
+    "passwordForgottenMessage": "We will send an email to your registered email address so you can reset your password. Do you want to continue?",
+    "passwordForgottenEmailMessage": "Please enter your registered email address or username in the 'Email or username' box and click 'Forgotten Password' again.",
     "passwordForgottenContinue": "Yes, send email",
     "passwordForgottenCancel": "Cancel",
     "passwordForgottenOkay": "Okay",
