Changed popup windows to look like iOS with header and back button instead of close. Added layout for messages, and message details, and updated bell icon to show an unread count. Created a MessagesProvider, but this needs hooking up to the API yet. Deleted old Database folder and provider, as these are now in the providers folder.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -8,6 +8,7 @@
     "favouritesTitle": "Favourites",
     "coachChatTitle": "Coach Chat",
     "messagesTitle": "Messages",
+    "messageTitle": "Message",
     "profileTitle": "Profile",
     "changePasswordTitle": "Change Password",
     "requestDataTitle": "Request Data",
