Favourites layout. including popup for recipe and lesson. for some reason there is a padding around the popups so they don't completely cover the favourites layout underneath.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -144,5 +144,6 @@
     "noResultsKBs": "No knowledge base items found!",
     "noMemberDetails": "We could not display your details, please try again later.",
     "noItemsFound": "No items found!",
-    "noNotifications": "There are no messages to display."
+    "noNotifications": "There are no messages to display.",
+    "lessonsTitle": "Lessons"
 }
