--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -145,5 +145,7 @@
     "noMemberDetails": "We could not display your details, please try again later.",
     "noItemsFound": "No items found!",
     "noNotifications": "There are no messages to display.",
-    "lessonsTitle": "Lessons"
+    "lessonsTitle": "Lessons",
+    "favouriteRemoveTitle": "Remove favourite",
+    "favouriteRemoveText": "Are you sure you want to remove this favourite?"
 }
