--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -147,5 +147,7 @@
     "noNotifications": "There are no messages to display.",
     "lessonsTitle": "Lessons",
     "favouriteRemoveTitle": "Remove favourite",
-    "favouriteRemoveText": "Are you sure you want to remove this favourite?"
+    "favouriteRemoveText": "Are you sure you want to remove this favourite?",
+    "deleteMessageTitle": "Delete message",
+    "deleteMessageText": "Are you sure you want to delete this message?"
 }
