Added a welcome tutorial, and set to open on Dashboard on first use. Also added menu item to open after if want to.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -149,5 +149,6 @@
     "favouriteRemoveTitle": "Remove favourite",
     "favouriteRemoveText": "Are you sure you want to remove this favourite?",
     "deleteMessageTitle": "Delete message",
-    "deleteMessageText": "Are you sure you want to delete this message?"
+    "deleteMessageText": "Are you sure you want to delete this message?",
+    "tutorialTitle":"Welcome Tutorial"
 }
