Added local notifications, dashboard with example usage, and an empty settings.dart screen in menu.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -150,5 +150,6 @@
     "favouriteRemoveText": "Are you sure you want to remove this favourite?",
     "deleteMessageTitle": "Delete message",
     "deleteMessageText": "Are you sure you want to delete this message?",
-    "tutorialTitle":"Welcome Tutorial"
+    "tutorialTitle":"Welcome Tutorial",
+    "settingsTitle": "Settings"
 }
