--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -164,5 +164,7 @@
     "notificationPermissionsNeedToAllowTitle": "Please Allow Notifications",
     "notificationPermissionsNeedToAllowText": "To set a daily reminder you will need to allow notifications on your device by clicking the button below.",
     "requestNotificationPermissionTitle": "Notifications",
-    "requestNotificationPermissionText": "To help you get the most from The PCOS Protocol, we may send you notifications from time to time. Would you like to receive notifications?"
+    "requestNotificationPermissionText": "To help you get the most from The PCOS Protocol, we may send you notifications from time to time. Would you like to receive notifications?",
+    "dataUsageWarningTitle": "Data Usage",
+    "dataUsageWarningText": "Warning - Please ensure you have enough data to stream videos in the app."
 }
