Updated dashboard layout. Also changed color at top to the light bg color. Added font Courgette.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2,7 +2,7 @@
     "@@locale": "en",
     "appTitle": "The PCOS Protocol",
     "companyTitle": "The PCOS Nutritionist",
-    "dashboardTitle": "Dashboard",
+    "dashboardTitle": "Your Course",
     "knowledgeBaseTitle": "Knowledge Base",
     "recipesTitle": "Recipes",
     "favouritesTitle": "Favourites",
