--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -160,6 +160,7 @@
     "settingsDailyReminderText": "Daily Reminder:",
     "dailyReminderTitle": "Your Daily Reminder",
     "dailyReminderText": "Don't forget to check your latest lesson or view your progress so far.",
+    "settingsYourWhyText": "Display 'Your Why':",
     "notificationPermissionsAllowButton": "Allow Notifications",
     "notificationPermissionsNeedToAllowTitle": "Please Allow Notifications",
     "notificationPermissionsNeedToAllowText": "To set a daily reminder you will need to allow notifications on your device by clicking the button below.",
