Adjusted layout of recipe details and course lesson to remove Card and padding.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -152,7 +152,7 @@
     "favouriteRemoveText": "Are you sure you want to remove this favourite?",
     "deleteMessageTitle": "Delete message",
     "deleteMessageText": "Are you sure you want to delete this message?",
-    "tutorialTitle":"Welcome Tutorial",
+    "tutorialTitle":"Tutorial",
     "settingsTitle": "Settings",
     "requestDailyReminderTitle": "Daily Reminder",
     "requestDailyReminderText": "To help you get the most from The PCOS Protocol, we can send you a daily reminder. Would you like to set a daily reminder?",
