Tutorial changes for iPad. Fixed settings to pass in a bool onlyShowDialyReminder.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -26,7 +26,7 @@
     "emailLinkTitle": "Email Link",
     "emailLinkText": "Or we can send a link to your email so you can visit the website on another device.",
     "openWebsiteTitle": "Open Questionnaire",
-    "openWebsiteText": "To register now on your device click the button below to visit the PCOS Questionnaire website.",
+    "openWebsiteText": "To register for The PCOS Protocol on your device click the 'Sign Up' button below to visit the PCOS Questionnaire website.",
     "openWebsiteWhy": "The PCOS Protocol is a personalised programme, delivered according to your own goals.",
     "signinErrorTitle": "Sign In Failed",
     "signinErrorText": "Your email/username or password are incorrect, please try again.",
