--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -150,6 +150,8 @@
     "lessonsTitle": "Lessons",
     "favouriteRemoveTitle": "Remove favourite",
     "favouriteRemoveText": "Are you sure you want to remove this favourite?",
+    "favouritesWatchNow": "Watch now",
+    "favouritesViewDetails": "View details",
     "deleteMessageTitle": "Delete message",
     "deleteMessageText": "Are you sure you want to delete this message?",
     "tutorialTitle":"Tutorial",
