Added set lesson to complete, and get a date back for next lesson available at datetime. Storing in Prefs. Also Recipes now uses ListResponse not StandardResponse. Next work out how to show next lesson when reaches datetime stored in prefs.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -173,7 +173,10 @@
     "coachChatFailedTitle": "Coach Chat",
     "coachChatFailedText": "We couldn't open the Coach Chat right now, please try again later.",
     "moduleText": "Module",
+    "lessonText": "Lesson",
     "viewPreviousModules": "View previous modules",
     "previousModules": "Previous Modules",
-    "saveText": "Save"
+    "saveText": "Save",
+    "noResultsLessons": "No lessons to display!",
+    "viewNow": "Open"
 }
