--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -180,5 +180,6 @@
     "noResultsLessons": "No lessons to display!",
     "viewNow": "Open",
     "dismissText": "Dismiss",
-    "textTaskValidation": "Please enter a value in the text box"
+    "textTaskValidation": "Please enter a value in the text box",
+    "boolTaskValidation": "Please make a selection above"
 }
