--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -181,5 +181,8 @@
     "viewNow": "Open",
     "dismissText": "Dismiss",
     "textTaskValidation": "Please enter a value in the text box",
-    "boolTaskValidation": "Please make a selection above"
+    "boolTaskValidation": "Please make a selection above",
+    "yourWhyTitle": "Your why:",
+    "yourWhyWarningTitle": "What's your why",
+    "yourWhyWarningText": "This can only be enabled after the first module has been completed."
 }
