Lesson layout adjustments, and fixed the database write/read async issue by changing for's to foreach async.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -150,7 +150,7 @@
     "lessonsTitle": "Lessons",
     "favouriteRemoveTitle": "Remove favourite",
     "favouriteRemoveText": "Are you sure you want to remove this favourite?",
-    "favouritesWatchNow": "Watch now",
+    "favouritesWatchNow": "View now",
     "favouritesViewDetails": "View details",
     "deleteMessageTitle": "Delete message",
     "deleteMessageText": "Are you sure you want to delete this message?",
