Modules updates, including previous modules reset to lesson 1 on change. Tutorial text moved to strings files. en-US file updated with full list, and locale set at top. Removed container with height from home page. Task description changed to HTML. Build 21.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -178,11 +178,34 @@
     "previousModules": "Previous Modules",
     "saveText": "Save",
     "noResultsLessons": "No lessons to display!",
-    "viewNow": "Open",
+    "viewNow": "View lesson",
     "dismissText": "Dismiss",
     "textTaskValidation": "Please enter a value in the text box",
     "boolTaskValidation": "Please make a selection above",
     "yourWhyTitle": "Your why:",
     "yourWhyWarningTitle": "What's your why",
-    "yourWhyWarningText": "This can only be enabled after the first module has been completed."
+    "yourWhyWarningText": "This can only be enabled after the first module has been completed.",
+    "tutorialWelcomeWelcome": "Welcome to",
+    "tutorialWelcomeThankYou": "Thank you for signing up to our programme. We are here to help you get the most from The PCOS Protocol.",
+    "tutorialWelcomeTailor": "We tailor the programme to meet your specific needs using the information provided in the questionnaire.",
+    "tutorialWelcomeModules": "It is important to take your time to complete all the modules and lessons in the programme, beginning with the first module 'What is your Why?'.",
+    "tutorialWelcomeCoachTitle": "Coach Chat",
+    "tutorialWelcomeCoachDesc": "Also, when you feel you need our support, remember to tap the 'Coach Chat' to contact one of our friendly experts.",
+    "tutorialNavigationHeaderBar": "Header Bar",
+    "tutorialNavigationDrawerMenu": "Open the menu drawer for app settings, profile, change password, policies, and to lock the app.",
+    "tutorialNavigationNotifications": "Tap the chat icon to use the 'Coach Chat' feature, or view your notifications by tapping the bell.",
+    "tutorialNavigationBottomTabs": "Bottom Tabs",
+    "tutorialNavigationYourCourse": "Your Course",
+    "tutorialNavigationRecipes": "Recipes",
+    "tutorialNavigationKB": "Knowledge Base",
+    "tutorialNavigationFaves": "Favourites",
+    "tutorialYourCourseTitle": "Your Course",
+    "tutorialYourCourseDesc": "Check this daily for your lessons and to complete your tasks",
+    "tutorialRecipesTitle": "Recipes",
+    "tutorialRecipesDesc": "Oh course we have recipes! Find recipes to help maintain your course goals",
+    "tutorialKBTitle": "Knowledge Base",
+    "tutorialKBDesc": "Any questions you have about food, exercise, supplements and all other course content can be found here",
+    "tutorialFavesTitle": "Favourites",
+    "tutorialFavesDesc": "Add lessons, knowledge base questions or recipes to your favourites tab for later",
+    "tutorialClose": "Close"
 }
