--- a/lib/l10n/intl_en_US.arb
+++ b/lib/l10n/intl_en_US.arb
@@ -1,4 +1,211 @@
 {
-    "@@locale": "en",
-    "favouritesTitle": "Favorites"
+    "@@locale": "en-US",
+    "appTitle": "The PCOS Protocol",
+    "companyTitle": "The PCOS Nutritionist",
+    "dashboardTitle": "Your Course",
+    "knowledgeBaseTitle": "Knowledge Base",
+    "recipesTitle": "Recipes",
+    "favouritesTitle": "Favorites",
+    "coachChatTitle": "Coach Chat",
+    "messagesTitle": "Messages",
+    "messageTitle": "Message",
+    "profileTitle": "Profile",
+    "changePasswordTitle": "Change Password",
+    "requestDataTitle": "Request Data",
+    "helpTitle": "Help",
+    "supportTitle": "Support",
+    "privacyTitle": "Privacy policy",
+    "termsOfUseTitle": "Terms of use",
+    "signInTitle": "Sign In",
+    "signUpTitle": "Sign Up",
+    "emailLabel":  "Email or Username",
+    "passwordLabel": "Password",
+    "gotoSignupText": "Sign up for The PCOS Protocol.",
+    "gotoSigninText": "Already have an account for The PCOS Protocol?",
+    "returnToSignInTitle": "Return to Sign In",
+    "emailLinkTitle": "Email Link",
+    "emailLinkText": "Or we can send a link to your email so you can visit the website on another device.",
+    "openWebsiteTitle": "Open Questionnaire",
+    "openWebsiteText": "To register for The PCOS Protocol on your device click the 'Sign Up' button below to visit the PCOS Questionnaire website.",
+    "openWebsiteWhy": "The PCOS Protocol is a personalized programme, delivered according to your own goals.",
+    "signinErrorTitle": "Sign In Failed",
+    "signinErrorText": "Your email/username or password are incorrect, please try again.",
+    "signInEmailNotVerifiedErrorText": "Your email address has not be verified, please check your inbox for a new verification email.",
+    "signinUnknownErrorText": "We could not sign you in, please try again later",
+    "validateEmailMessage": "Please enter your email or username",
+    "validatePasswordMessage": "Please enter your password",
+    "questionnaireWebsiteErrorTitle": "Could not open browser",
+    "questionnaireWebsiteErrorText": "Open a browser and visit [url]",
+    "clearButton": "Clear",
+    "pinCorrectTitle": "PIN Correct",
+    "pinForgottenTitle": "Forgotten PIN",
+    "pinForgottenMessage": "This will clear your credentials and PIN so you can sign in with your username/email and password. Do you want to continue?",
+    "pinForgottenContinue": "Continue",
+    "pinForgottenCancel": "Cancel",
+    "passwordForgottenTitle": "Forgotten Password",
+    "passwordForgottenMessage": "We will send an email to your registered email address so you can reset your password. Do you want to continue?",
+    "passwordForgottenEmailMessage": "Please enter your registered email address or username in the 'Email or username' box and click 'Forgotten Password' again.",
+    "passwordForgottenContinue": "Yes, send email",
+    "passwordForgottenCancel": "Cancel",
+    "okayText": "Okay",
+    "passwordForgottenCompleteMessage": "We have sent you a reset password email, please check your inbox and junk mail. Thank you",
+    "passwordForgottenFailedMessage": "We could not send you an email right now, please try again later.",
+    "pinSetTitle": "Please set your unlock PIN",
+    "pinConfirmTitle": "Please confirm your unlock PIN",
+    "pinEnteredSuccessfulTitle": "PIN successful",
+    "pinSetSuccessfulTitle": "Your PIN has been set",
+    "pinSetSuccessfulMessage": "Use this to unlock the app",
+    "pinEntryErrorTitle": "Please try again",
+    "pinEntryErrorText": "Your PINs do not match, please try again",
+    "pinSaveErrorTitle": "Ooops",
+    "pinSaveErrorText": "We could not save your pin to your device, please try again next time you sign in.",
+    "pinUnlockTitle": "Enter your PIN to unlock",
+    "pinUnlockErrorTitle": "Incorrect PIN",
+    "pinUnlockErrorText": "Your PIN is incorrect, please try again",
+    "pinUnlockAttemptsErrorTitle": "Unsuccessful Pin Entry",
+    "pinUnlockAttemptsErrorText": "You have incorrectly entered your PIN five times, please sign-in using your email and password.",
+    "pinRefreshErrorTitle": "Authentication token expired",
+    "pinRefreshErrorText": "Your authentication token has expired, please sign-in using your email and password.",
+    "internetConnectionTitle": "Internet connection required",
+    "internetConnectionText": "Please ensure you are connected to the internet.",
+    "coachChatHeading": "Chat to your Coach",
+    "sendButtonText": "Send",
+    "enterMessageText": "Enter your message",
+    "validateMessageText": "Please enter your message text",
+    "searchInputText": "Search",
+    "recipeDetailsSummaryTab": "Summary",
+    "recipeDetailsIngredientsTab": "Ingredients",
+    "recipeDetailsMethodTab": "Method",
+    "recipeDetailsTipsTab": "Tips",
+    "minutesShort": "mins",
+    "recipeDifficultyEasy": "Easy",
+    "recipeDifficultyMedium": "Medium",
+    "recipeDifficultyHard": "Hard",
+    "loadingVideo": "Loading Video",
+    "gettingStarted": "Getting started",
+    "frequentlyAskedQuestions": "FAQs",
+    "courseQuestions": "Course questions",
+    "tryAgain": "Please try again later.",
+    "profileFirstNameLabel": "First name",
+    "profileLastNameLabel": "Last name",
+    "profileAliasLabel": "Username",
+    "profileEmailLabel": "Email",
+    "profileEditButton": "Edit profile",
+    "profileSaveButton": "Save profile",
+    "profileCancelButton": "Cancel",
+    "profileValidateFirstNameMessage": "Please enter your first name.",
+    "profileValidateLastNameMessage": "Please enter your last name.",
+    "profileValidateEmailMessage": "Please enter your email.",
+    "profileInvalidEmailMessage": "Please enter a valid email address.",
+    "userNameLocked":  "Username cannot be updated",
+    "changePasswordOldLabel": "Current password",
+    "changePasswordNewLabel": "New password",
+    "changePasswordConfirmLabel": "Confirm password",
+    "changePasswordSaveButton": "Change password",
+    "changePasswordOldMessage": "Please enter your current password.",
+    "changePasswordNewMessage": "Password must be at least 6 characters.",
+    "changePasswordConfirmMessage": "Please confirm your new password.",
+    "changePasswordDifferentMessage": "Your new and confirm passwords do not match.",
+    "changePasswordOldPasswordWrongTitle": "Current password incorrect",
+    "changePasswordOldPasswordWrongMessage": "Your current password is not correct, please try entering your current password again.",
+    "changePasswordFailedTitle": "Change password failed",
+    "changePasswordFailedMessage": "We could not update your password, please try again later.",
+    "changePasswordSuccessTitle": "Change password successful",
+    "changePasswordSuccessMessage": "Your password has been updated.",
+    "tagAll": "All",
+    "recipesTagBreakfast": "Breakfast",
+    "recipesTagMains": "Mains",
+    "recipesTagSnack": "Snack",
+    "recipesTagSweet": "Sweet",
+    "recipesTagSavoury": "Savoury",
+    "recipesTagVegetarian": "Vegetarian",
+    "recipesTagVegan": "Vegan",
+    "recipesTagEggFree": "Egg-free",
+    "recipesTagFodmap": "Fodmap-friendly",
+    "kbTagDiet": "Diet",
+    "kbTagEnergy": "Energy",
+    "kbTagExercise": "Exercise",
+    "kbTagFertility": "Fertility",
+    "kbTagHair": "Hair",
+    "kbTagInsulin": "Insulin",
+    "kbTagSkin": "Skin",
+    "kbTagStress": "Stress",
+    "kbTagThyroid": "Thyroid",
+    "searchHeaderFilterText": "Filter:",
+    "areYouSureText": "Close app",
+    "exitAppText": "Are you sure you want to close the App?",
+    "yesText": "Yes",
+    "noText": "No",
+    "onText": "On",
+    "offText": "Off",
+    "versionDialogTitle": "App Store",
+    "versionDialogDesc": "Please open the app store on your device, and upgrade The PCOS Protocol app.",
+    "versionText1": "This version of The PCOS Protocol app is no longer supported.",
+    "versionText2": "Please visit the app store to upgrade your app version.",
+    "noResultsRecipes": "No recipes found!",
+    "noResultsKBs": "No knowledge base items found!",
+    "noMemberDetails": "We could not display your details, please try again later.",
+    "noItemsFound": "No items found!",
+    "noNotifications": "There are no messages to display.",
+    "lessonsTitle": "Lessons",
+    "favouriteRemoveTitle": "Remove favorite",
+    "favouriteRemoveText": "Are you sure you want to remove this favorite?",
+    "favouritesWatchNow": "View now",
+    "favouritesViewDetails": "View details",
+    "deleteMessageTitle": "Delete message",
+    "deleteMessageText": "Are you sure you want to delete this message?",
+    "tutorialTitle":"Tutorial",
+    "settingsTitle": "Settings",
+    "requestDailyReminderTitle": "Daily Reminder",
+    "requestDailyReminderText": "To help you get the most from The PCOS Protocol, we can send you a daily reminder. Would you like to set a daily reminder?",
+    "requestDailyReminderNoText": "You can set a daily reminder later by clicking the Settings icon in the main menu.",
+    "settingsDailyReminderText": "Daily Reminder:",
+    "dailyReminderTitle": "Your Daily Reminder",
+    "dailyReminderText": "Don't forget to check your latest lesson or view your progress so far.",
+    "settingsYourWhyText": "Display 'Your Why':",
+    "notificationPermissionsAllowButton": "Allow Notifications",
+    "notificationPermissionsNeedToAllowTitle": "Please Allow Notifications",
+    "notificationPermissionsNeedToAllowText": "To set a daily reminder you will need to allow notifications on your device by clicking the button below.",
+    "requestNotificationPermissionTitle": "Notifications",
+    "requestNotificationPermissionText": "To help you get the most from The PCOS Protocol, we may send you notifications from time to time. Would you like to receive notifications?",
+    "dataUsageWarningTitle": "Data Usage",
+    "dataUsageWarningText": "Warning - Please ensure you have enough data to stream videos.",
+    "coachChatFailedTitle": "Coach Chat",
+    "coachChatFailedText": "We couldn't open the Coach Chat right now, please try again later.",
+    "moduleText": "Module",
+    "lessonText": "Lesson",
+    "viewPreviousModules": "View previous modules",
+    "previousModules": "Previous Modules",
+    "saveText": "Save",
+    "noResultsLessons": "No lessons to display!",
+    "viewNow": "View lesson",
+    "dismissText": "Dismiss",
+    "textTaskValidation": "Please enter a value in the text box",
+    "boolTaskValidation": "Please make a selection above",
+    "yourWhyTitle": "Your why:",
+    "yourWhyWarningTitle": "What's your why",
+    "yourWhyWarningText": "This can only be enabled after the first module has been completed.",
+    "tutorialWelcomeWelcome": "Welcome to",
+    "tutorialWelcomeThankYou": "Thank you for signing up to our programme. We are here to help you get the most from The PCOS Protocol.",
+    "tutorialWelcomeTailor": "We tailor the programme to meet your specific needs using the information provided in the questionnaire.",
+    "tutorialWelcomeModules": "It is important to take your time to complete all the modules and lessons in the programme, beginning with the first module 'What is your Why?'.",
+    "tutorialWelcomeCoachTitle": "Coach Chat",
+    "tutorialWelcomeCoachDesc": "Also, when you feel you need our support, remember to tap the 'Coach Chat' to contact one of our friendly experts.",
+    "tutorialNavigationHeaderBar": "Header Bar",
+    "tutorialNavigationDrawerMenu": "Open the menu drawer for app settings, profile, change password, policies, and to lock the app.",
+    "tutorialNavigationNotifications": "Tap the chat icon to use the 'Coach Chat' feature, or view your notifications by tapping the bell.",
+    "tutorialNavigationBottomTabs": "Bottom Tabs",
+    "tutorialNavigationYourCourse": "Your Course",
+    "tutorialNavigationRecipes": "Recipes",
+    "tutorialNavigationKB": "Knowledge Base",
+    "tutorialNavigationFaves": "Favorites",
+    "tutorialYourCourseTitle": "Your Course",
+    "tutorialYourCourseDesc": "Check this daily for your lessons and to complete your tasks",
+    "tutorialRecipesTitle": "Recipes",
+    "tutorialRecipesDesc": "Oh course we have recipes! Find recipes to help maintain your course goals",
+    "tutorialKBTitle": "Knowledge Base",
+    "tutorialKBDesc": "Any questions you have about food, exercise, supplements and all other course content can be found here",
+    "tutorialFavesTitle": "Favorites",
+    "tutorialFavesDesc": "Add lessons, knowledge base questions or recipes to your favorites tab for later",
+    "tutorialClose": "Close"
 }
